fix: on a disable grid, style correctly the elements to collapse nicely one after another an display correctly their contents

--- a/public/scss/models/_block.scss
+++ b/public/scss/models/_block.scss
@@ -8,3 +8,9 @@
 		}
 	}
 }
+
+.disable-grid.disabled .grid-stack>.grid-stack-item.perfect-grid-item {
+	position: relative;
+	width: 100%;
+	left: auto;
+}
